# pkgly

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml  dev.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
crates/pkgly-cli/: Cargo.toml
crates/pkgly-cli/src/: cli.rs  config.rs  lib.rs  main.rs  native.rs  output.rs  repo_ref.rs
crates/pkgly-cli/tests/: command_tests.rs  config_tests.rs  parsing_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  dyn_storage.rs  lib.rs  testing.rs  tests.rs
crates/storage/src/fs/: content.rs  file.rs  file_meta.rs  file_reader.rs  mod.rs
crates/storage/src/fs/file_meta/: tests.rs
crates/storage/src/fs/file_reader/: tests.rs
crates/storage/src/local/: error.rs  mod.rs  stream.rs  tests.rs
crates/storage/src/s3/: mod.rs  regions.rs  tests.rs
crates/storage/src/testing/: storage.rs  tests.rs
pkgly/: Cargo.toml  build.rs
pkgly/resources/rbac/: policy.csv
pkgly/src/: config_editor.rs  exporter.rs  main.rs  test_support.rs
pkgly/src/app/: build_info.rs  config.rs  email.rs  email_service.rs  mod.rs  open_api.rs  resources.rs  routes.rs  scheduler.rs  site.rs  state.rs  tests.rs  upload_state_tests.rs  web.rs
pkgly/src/app/api/: artipie.rs  mod.rs  repository.rs  search.rs  security.rs  storage.rs  system.rs  tests.rs  user.rs  user_management.rs
pkgly/src/app/api/artipie/: tests.rs
pkgly/src/app/api/project/: mod.rs
pkgly/src/app/api/repository/: browse.rs  config.rs  management.rs  packages.rs  virtual.rs
pkgly/src/app/api/search/: database.rs  query_parser.rs  tests.rs  version_constraint.rs
pkgly/src/app/api/security/: tests.rs
pkgly/src/app/api/storage/: local.rs  s3.rs
pkgly/src/app/api/system/: tests.rs
pkgly/src/app/api/user/: oauth.rs  password_reset.rs  sso.rs  tests.rs  tokens.rs
pkgly/src/app/authentication/: header.rs  jwks.rs  layer.rs  mod.rs  providers.rs  session.rs  tests.rs  ws.rs
pkgly/src/app/authentication/header/: tests.rs
pkgly/src/app/authentication/jwks/: tests.rs
pkgly/src/app/authentication/layer/: future.rs
pkgly/src/app/authentication/oauth/: mod.rs  rbac.rs  tests.rs
pkgly/src/app/authentication/session/: storage.rs  tests.rs
pkgly/src/app/build_info/: tests.rs
pkgly/src/app/config/: max_upload.rs  security.rs
pkgly/src/app/config/max_upload/: tests.rs
pkgly/src/app/email_service/: tests.rs
pkgly/src/app/frontend/: hosted.rs  mod.rs
pkgly/src/app/frontend/hosted/: route_parser_tests.rs
pkgly/src/app/request_logging/: layer.rs  mod.rs  request_span.rs  response_body.rs  tests.rs
pkgly/src/app/request_logging/layer/: tests.rs
pkgly/src/app/responses/: mod.rs
pkgly/src/app/routes/: tests.rs
pkgly/src/app/state/: tests.rs
pkgly/src/app/web/: tests.rs
pkgly/src/app/webhooks/: mod.rs  tests.rs
pkgly/src/audit/: mod.rs  tests.rs
pkgly/src/config/: loading.rs  mod.rs  tests.rs  validation.rs
pkgly/src/error/: api.rs  mod.rs  repository.rs  tests.rs
pkgly/src/logging/: mod.rs
pkgly/src/logging/config/: mod.rs  otel.rs  tests.rs
pkgly/src/logging/config/otel/: tests.rs
pkgly/src/repository/: auth_config.rs  base.rs  base_tests.rs  error.rs  mod.rs  proxy_indexing.rs  repo_auth.rs  repo_http.rs  repo_type.rs  staging.rs  utils.rs
pkgly/src/repository/auth_config/: tests.rs
pkgly/src/repository/cargo/: configs.rs  error.rs  hosted.rs  mod.rs  tests.rs  utils.rs
pkgly/src/repository/cargo/configs/: tests.rs
pkgly/src/repository/cargo/utils/: tests.rs
pkgly/src/repository/deb/: configs.rs  hosted.rs  metadata.rs  mod.rs  package.rs  proxy.rs  proxy_indexing.rs  proxy_refresh.rs  refresh_status.rs  scheduler.rs  tests.rs
pkgly/src/repository/deb/configs/: tests.rs
pkgly/src/repository/deb/hosted/: tests.rs
pkgly/src/repository/deb/metadata/: tests.rs
pkgly/src/repository/deb/package/: tests.rs
pkgly/src/repository/deb/proxy/: tests.rs
pkgly/src/repository/deb/proxy_indexing/: tests.rs
pkgly/src/repository/deb/proxy_refresh/: tests.rs
pkgly/src/repository/deb/refresh_status/: tests.rs
pkgly/src/repository/deb/scheduler/: tests.rs
pkgly/src/repository/docker/: auth.rs  configs.rs  handlers.rs  hosted.rs  metadata.rs  mod.rs  proxy.rs  tests.rs  types.rs
pkgly/src/repository/docker/auth/: tests.rs
pkgly/src/repository/docker/handlers/: tests.rs
pkgly/src/repository/go/: configs.rs  ext.rs  hosted.rs  mod.rs  proxy.rs  tests.rs  types.rs  utils.rs
pkgly/src/repository/helm/: chart.rs  configs.rs  hosted.rs  index.rs  mod.rs  oci.rs  types.rs
pkgly/src/repository/hosted/: mod.rs
pkgly/src/repository/maven/: configs.rs  hosted.rs  mod.rs  proxy.rs  utils.rs
pkgly/src/repository/npm/: configs.rs  hosted.rs  mod.rs  proxy.rs  tests.rs  utils.rs
pkgly/src/repository/npm/login/: mod.rs  (+2 more)
pkgly/src/repository/nuget/: configs.rs  hosted.rs  mod.rs  proxy.rs  tests.rs  utils.rs  virtual.rs
pkgly/src/repository/php/: composer.rs  composer_tests.rs  configs.rs  hosted.rs  mod.rs  proxy.rs  proxy_tests.rs  tests.rs  utils.rs
pkgly/src/repository/proxy/: base_proxy.rs  mod.rs
pkgly/src/repository/python/: configs.rs  hosted.rs  mod.rs  proxy.rs  tests.rs  utils.rs
pkgly/src/repository/repo_http/: header.rs  repo_auth.rs  repo_tracing.rs  tests.rs
pkgly/src/repository/retention/: config.rs  mod.rs  scheduler.rs  status.rs  tests.rs
pkgly/src/repository/ruby/: compact_index.rs  configs.rs  full_index.rs  gem.rs  hosted.rs  mod.rs  proxy.rs  tests.rs  utils.rs
pkgly/src/repository/utils/: tests.rs
pkgly/src/repository/virtual/: config.rs  mod.rs  resolver.rs  tests.rs
pkgly/src/search/: mod.rs  query.rs  reindex.rs
pkgly/src/search/query/: tests.rs
pkgly/src/utils/: mod.rs  requests.rs  upstream.rs
pkgly/src/utils/header/: date_time.rs
pkgly/src/utils/request_logging/: access_log.rs  mod.rs  request_id.rs
pkgly/src/utils/requests/: ip_addr.rs  json.rs  tests.rs
pkgly/src/utils/response/: conflict.rs
pkgly/src/utils/upstream/: tests.rs
tests/fixtures/cargo/pkgly-cargo-test/: Cargo.toml  LICENSE  README.md
(+512 files in other folders)
