[workspace]
members = ["crates/*", "pkgly"]
resolver = "3"
[workspace.package]
version = "3.0.0-BETA"
authors = ["Konstantin Shcherban <insider@sudoers.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kshcherban/pkgly"
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# OpenTelemetry
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30", features = [] }
opentelemetry_sdk = { version = "0.30", features = [
    "rt-tokio",
    "trace",
    "metrics",
    "logs",
    "testing",
    "experimental_metrics_custom_reader",
] }
opentelemetry-otlp = { version = "0.30", default-features = true, features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
] }
opentelemetry-appender-tracing = "0.30"
opentelemetry-semantic-conventions = "0.27"
utoipa = { version = "5", features = ["chrono", "uuid", "url", "debug"] }
rand = "0.9"

nr-core = { path = "crates/core" }
nr-macros = { path = "crates/macros" }
nr-storage = { path = "crates/storage" }
# Rust Utilities
futures = "0.3"
derive_more = { version = "2.0", features = [
    "deref",
    "from",
    "into",
    "as_ref",
    "debug",
] }
ahash = "0.8"
parking_lot = { version = "0.12", features = [] }
dashmap = "5"
futures-util = "0.3.21"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
mime_guess = "2"
mime = "0.3"
either = "1.12"
num_cpus = "1"


base64 = "0.22"
fs2 = "0.4"

# Error Handling
schemars = { git = "https://github.com/kshcherban/schemars.git", branch = "if_for_adjacent" }

thiserror = "2"
anyhow = "1"

auto_impl = "1.2"
once_cell = "1"
regex = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1" }
http = "1"
http-body-util = "0.1"
http-body = "1"
bytes = "1"
pin-project = "1"
url = "2"
## Hashing
digestible = { git = "https://github.com/kshcherban/digestible.git", features = [
    "base64",
    "uuid",
    "chrono",
] }
digest = { version = "0.10", features = ["std", "alloc"] }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
clap = { version = "4", features = ["derive"] }
pg-extended-sqlx-queries = { git = "https://github.com/kshcherban/pg-extended-sqlx-queries.git", features = [
    "uuid",
    "chrono",
    "json",
] }

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "chrono",
    "json",
    "derive",
    "uuid",
    "migrate",
]
[workspace.dependencies.reqwest]
version = "0.12"
features = ["stream", "http2", "json", "rustls-tls"]
default-features = false

[workspace.lints.rust]
async_fn_in_trait = "allow"
deprecated = "deny"
unsafe_code = "forbid"          # only allow in special crates, see below
unused_must_use = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_imports = "deny"
dead_code = "warn"

[workspace.lints.clippy]
# Hard errors – things that must not land in prod
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"                  # `panic!`, `unreachable!`, etc. (outside tests)
todo = "deny"
unimplemented = "deny"
# Locking / concurrency related
mutex_atomic = "warn"            # suggests using Atomic* instead of Mutex for simple scalars
await_holding_lock = "deny"      # absolutely critical for async code
needless_borrow = "warn"         # often shows lock misuse patterns
large_stack_arrays = "warn"      # can be relevant around stack-heavy concurrent code
significant_drop_in_scrutinee = "warn"  # dangerous drops, including locks, inside patterns

[profile.dev.package."argon2"]
opt-level = 3
[profile.dev.package."tokio"]
opt-level = 3
[profile.dev.package."digest"]
opt-level = 3
[profile.dev.package."md-5"]
opt-level = 3
[profile.dev.package."sha1"]
opt-level = 3
[profile.dev.package."sha2"]
opt-level = 3
[profile.dev.package."sha3"]
opt-level = 3
