[package]
name = "nr-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
nr-core.workspace = true
tracing.workspace = true
tokio.workspace = true
strum.workspace = true
anyhow.workspace = true
mime_guess.workspace = true
mime.workspace = true
derive_more.workspace = true
base64.workspace = true
ahash.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
http.workspace = true
utoipa.workspace = true
http-body.workspace = true
tokio-util.workspace = true
tokio-stream = { version = "0.1", features = ["fs"] }
pin-project.workspace = true
futures.workspace = true
walkdir = "2"
sysinfo = { version = "0.30", default-features = false }

bytes.workspace = true
fs2.workspace = true
# Hashing Algorithms
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
digest.workspace = true

postcard = { version = "1.0", features = ["use-std", "alloc"] }
either.workspace = true
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"
lru = "0.16"
hex = "0.4"
url = { version = "2.4", features = ["serde"] }
[lints]
workspace = true

[dev-dependencies]
toml.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
nr-core = { workspace = true, features = ["testing"] }
anyhow = { workspace = true }
tempfile = "3"
hyper.workspace = true
hyper-util = { workspace = true, features = ["full"] }
http-body-util.workspace = true
